--- a/OhMyGroc/src/test/java/resources/application.properties
+++ b/OhMyGroc/src/test/java/resources/application.properties
@@ -6,3 +6,7 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.format_sql=true
+
+
+jwt.secret=supersecretthatyouneverfindout
+jwt.expiration=10
